added my travel blog

--- a/style/travelblog.css
+++ b/style/travelblog.css
@@ -1,6 +1,10 @@
 div{
-  background-color: rgb(126, 219, 188);
-  padding: 20px;
-  margin: 5px;
-  border: 9px solid rgb(172, 112, 69);
+  margin: 9px;
+  padding:15px;
+  font-family: cursive;
+}
+
+h1{
+   text-align: center;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
